test/types/records/split-init/split-init-ref-const.good
split-init-ref-const.chpl:4: error: Cannot set a non-const reference to a const variable.
