test/types/records/split-init/split-init-ref-const.chpl
proc main() {
  const x:int = 0;
  ref r;
  r = x;
  writeln(r);
}
